# laba7

./: .gitignore  CMakeLists.txt  JsonService.cpp  JsonService.h  Service.h  Weather.h  WeatherService  XmlService.cpp  XmlService.h  main.cpp  weather.json  weather.xml
